src/objects/Contract__c.object
<CustomObject>
    <description>This object allows us to track Contracts through their related Applications.</description>
    <fields>
        <fullName>Application__c</fullName>
        <description>The application that houses the business and contract information.</description>
        <inlineHelpText>The application that houses the business and contract information.</inlineHelpText>
        <label>Application</label>
        <referenceTo>Participation__c</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ContractNumber__c</fullName>
        <description>The official contract number.</description>
        <inlineHelpText>The official contract number.</inlineHelpText>
        <label>Contract Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization__c</fullName>
        <description>The Organization on the Application record.</description>
        <formula>HYPERLINK(Application__r.Organization__r.Id,  Application__r.Organization__r.Name )</formula>
        <inlineHelpText>Auto-populated Organization from the Application record.</inlineHelpText>
        <label>Organization</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductsServices__c</fullName>
        <description>Which products and/or services does this contract cover?</description>
        <inlineHelpText>Which products and/or services does this contract cover?</inlineHelpText>
        <label>Products/Services</label>
        <type>TextArea</type>
    </fields>
    <label>Contract</label>
    <nameField>
        <displayFormat>CON-{00}</displayFormat>
        <label>Contract Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contracts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>